--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
+
+
 .action-bar {
     display: flex;
-    /* justify-content: space-between; */
     justify-content: center;
     width: 100%;
     height: 50px;
@@ -9,7 +11,8 @@
     margin-bottom: 3vw;
 }
 .title-txt {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Song Myung', serif;
+    text-shadow: 2px 2px 2px lightgray;
     font-size: medium;
 }
 .todolist-align {
