--- a/src/app/component/todo-list-box/todo-list-box.component.css
+++ b/src/app/component/todo-list-box/todo-list-box.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
+
 .list-box {
     width: 100%;
     height: 100%;
@@ -10,14 +12,15 @@
     color:#000000;
     margin-bottom: 3vw;
     font-size: 3vw;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Song Myung', serif;
 }
 .list-container {
     width: calc(100% - 22vw);
     height: 100vw;
     border-radius: 1vw;
     border-style: solid;
-    box-shadow: 5px 5px 5px 5px gray;
+    background: linear-gradient( to bottom,white, lightblue);
+    box-shadow: 5px 5px 5px 5px lightslategrey;
     border-color: #6495ed;
     margin-bottom: 4vw;
     padding-top: 3vw;
