--- a/src/app/component/todo-target/todo-target.component.css
+++ b/src/app/component/todo-target/todo-target.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
+
 .list-item-container {
     width: inherit;
     height: 40px;
@@ -12,7 +14,7 @@
     height: 32px;
 }
 .list-txt {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Song Myung', serif;
     font-size: medium;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -21,6 +23,8 @@
 }
 #list-input {
     width: -webkit-fill-available;
+    font-family: 'Song Myung', serif;
+    background: transparent;
     border: hidden;
 }
 .check-icon {
@@ -34,5 +38,4 @@
 .success-list {
     color: dimgray;
     text-decoration: line-through;
-    background-color: lightblue;
 }
